# platform-test

./: .dockleignore  .gitignore  .grype.yml  .hadolint.yaml  .trivyignore.yaml  Makefile  README.md  docker-compose.yml  patch  platform-test.mak  platform-test.make  test-s3-upload.sh  trivy.yaml
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: image-scan-findings.md
.github/actions/: configure-aws-credentials.yml
.github/workflows/: build-and-publish.yml  cd-app-catala.yml  cd-app-docai.yml  cd-app-docuai.yml  cd-app-documentai-api.yml  cd-app-documentai.yml  cd-app-flask.yml  cd-app-nextjs-storybook.yml  cd-app-nextjs.yml  cd-app-rails.yml  cd-app.yml  cd.yml  check-ci-cd-auth.yml  check-infra-auth.yml  check-infra-deploy-status.yml  ci-app-catala-infra-service.yml  ci-app-catala-pr-environment-checks.yml  ci-app-catala-pr-environment-destroy.yml  ci-app-catala-vulnerability-scans.yml  ci-app-catala.yml  ci-app-docai-infra-service.yml  ci-app-docai-pr-environment-checks.yml  ci-app-docai-pr-environment-destroy.yml  ci-app-docai-vulnerability-scans.yml  ci-app-docai.yml  ci-app-docuai-infra-service.yml  ci-app-docuai-pr-environment-checks.yml  ci-app-docuai-pr-environment-destroy.yml  ci-app-docuai-vulnerability-scans.yml  ci-app-docuai.yml  ci-app-documentai-api-infra-service.yml  ci-app-documentai-api.yml  (+50 more)
.strata-template-documentai-api/: app-docai.yml  app-docuai.yml  app-documentai-api.yml  app-documentai.yml
.strata-template-rules-engine-catala/: app-catala.yml
.template-application-flask/: app-flask.yml
.template-application-nextjs/: app-nextjs.yml
.template-application-rails/: app-rails.yml
.template-infra/: app-app-catala.yml  app-app-docai.yml  app-app-docuai.yml  app-app-documentai-api.yml  app-app-documentai.yml  app-app-flask.yml  app-app-nextjs.yml  app-app-rails.yml  app-app.yml  base.yml
_build/: .ninja_log
app/: Dockerfile  app.py  db-migrate  db.py  healthcheck.sh  index.html  migrations.sql  notifications.py  requirements.txt  sms_notifications.py  start-server.sh  storage.py
app-catala/: .gitignore  .grype.yml  Dockerfile  Makefile  README.md  docker-compose.yml  local.env  pyproject.toml
app-catala/catala/: clerk.toml
app-catala/catala/src/: paidleave.catala_en
app-catala/catala/tests/: paidleave_test.catala_en
app-catala/src/: api.py  main.py
app-catala/tests/: test_api.py
app-docai/: .gitattributes  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
app-docuai/: Dockerfile  Makefile  README.md  docker-compose.yml  local.env.example  pyproject.toml
app-docuai/src/documentai_api/: app.py  main.py
app-docuai/src/documentai_api/cli/: export_openapi.py
app-docuai/src/documentai_api/config/: constants.py  env.py
app-docuai/src/documentai_api/jobs/bda_result_processor/: main.py
app-docuai/src/documentai_api/jobs/document_processor/: main.py
app-docuai/src/documentai_api/logging/: audit.py  config.py  decodelog.py  formatters.py
app-docuai/src/documentai_api/models/: base.py
app-docuai/src/documentai_api/services/: ddb.py
app-docuai/src/documentai_api/utils/: aws_client_factory.py  bda.py  bda_invoker.py  bda_output_processor.py  ddb.py  document_detector.py  models.py  response_builder.py  s3.py  schemas.py
app-docuai/tests/: conftest.py  test_app.py  test_app_auth.py
app-docuai/tests/helpers/fixtures/: aws.py
app-docuai/tests/helpers/fixtures/db/: ddb.py
app-docuai/tests/jobs/: test_document_processor_job.py
app-docuai/tests/logging/: test_formatters.py  test_pii.py
app-docuai/tests/services/: test_bda_service.py  test_ddb_service.py  test_s3_service.py
app-docuai/tests/utils/: test_aws_client_factory_util.py  test_bda_invoker_util.py  test_bda_util.py  test_env_util.py  test_response_builder_util.py  test_schemas_util.py
app-documentai/: Dockerfile  Makefile  README.md  docker-compose.yml  local.env.example
app-documentai-api/: .dockerignore  Makefile  README.md  docker-compose.yml  local.env.example
app-flask/: .dockleconfig  Makefile  docker-compose.debug.yml  docker-compose.override.yml.example  docker-compose.yml  local.env  openapi.generated.yml  pyproject.toml
app-nextjs/: Makefile.config  README.md  docker-compose.yml  package-lock.json
app-rails/: .dockerignore  .dockleconfig  .gitignore  .hadolint.yaml  .rubocop.yml  Dockerfile  Gemfile  Guardfile  Makefile  Procfile.dev  README.md  docker-compose.mock-production.yml  docker-compose.yml  local.env.example  package-lock.json  package.json  trivy-secret.yaml
docs/: README.md  feature-flags.md  system-architecture.md
e2e/: package.json
infra/: .gitignore
platform-test/: Makefile
test/: infra_test.go
(+773 files in other folders)
