[project]
name = "strata-template-rules-engine-catala"
version = "0.1.0"
description = "A Catala-based rules engine for encoding legislative and regulatory rules"
authors = [{ name = "Nava Engineering", email = "engineering@navapbc.com" }]
requires-python = "~=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "gmpy2==2.2.1",
    "python-dateutil==2.9.0",
    "pydantic>=2.4.2",
    "pydantic-settings>=2.0.3",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.5.1",
    "coverage>=7.3.2",
    "pytest>=7.4.2",
    "pytest-watch>=4.2.0",
    "httpx>=0.27.0",
    "setuptools>=70.0.0",
    "ruff>=0.4.9",
]

[project.scripts]
start-server = "src.main:main"

[tool.poetry]
packages = [{ include = "src" }]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100
exclude = [
    "src/generated/**"
]

[tool.ruff.lint]
select = ["B", "C", "E", "F", "W", "B9"]
ignore = ["E266", "E501", "C4", "C901"]

[tool.mypy]
color_output = true
error_summary = true
pretty = true
show_error_codes = true
show_column_numbers = true
show_error_context = true
namespace_packages = true
ignore_missing_imports = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
strict_equality = true
warn_no_return = true
warn_redundant_casts = true
warn_unreachable = true
warn_unused_ignores = true
exclude = [
    'src/generated/'
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.coverage.run]
omit = ["src/generated/*.py"]
